# eficiencia_energetica

./: .gitignore  README.md
.atl/: skill-registry.md
00_documentacion/: documentacion.md
01_notebooks/: TPI_Energia_CRISP_DM  TPI_Energia_CRISP_DM.ipynb
app/: docker-compose.yml
app/.atl/: .skill-registry.cache.json  skill-registry.md
app/backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  seed_data.py
app/backend/.atl/: skill-registry.md
app/backend/api/v1/endpoints/: auth.py  dataset.py  eda.py  modelos.py
app/backend/core/: config.py  dependencies.py  security.py
app/backend/db/: database.py
app/backend/models/: __init__.py  dataset_upload.py  registro_demanda.py  user.py
app/backend/repositories/: dataset_repo.py  demanda_repo.py
app/backend/schemas/: auth.py  dataset.py  prediccion.py
app/backend/services/: model_service.py  pipeline.py
app/frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
app/frontend/src/: App.css  App.tsx  api.ts  index.css
app/frontend/src/components/: ChartCard.tsx  Footer.css  Footer.tsx  LoginComponent.css  LoginComponent.tsx  NavBar.css  NavBar.tsx  StatCard.tsx  Toast.css  Toast.tsx
app/frontend/src/pages/: CargaPage.css  CargaPage.tsx  DocsPage.css  DocsPage.tsx  EdaPage.css  EdaPage.tsx  Layout.css  Layout.tsx  PredictPage.css  PredictPage.tsx
