[project]
name = "backend"
version = "0.1.0"
description = "Backend para Eficiencia Energética con FastAPI y ML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.34.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.28",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "joblib>=1.5.0",
    "xgboost>=3.2.0",
    "python-dotenv>=1.2.2",
    "email-validator>=2.3.0",
    "bcrypt==4.0.1",
]

[tool.uv]
managed = true
